@@ -2,7 +2,12 @@ Version history
 
 1.22
 - Fixes issue where restored window now should be properly maximized
-- Improved error handling when external command fails, e.g. "Realign everything", "Realign selected sequences" 
+- Improved error handling when external command fails, e.g. "Realign everything", "Realign selected sequences"
+- Add function "Replace terminal GAPs into missing char (?)"
+- Add Function "Replace missing char (?) into GAP (-)"
+- Change "Primer" menu to "Tool" menu and move "Primer" to this as a sumbeny
+- Minor changes in Linux start-script
+- Minor changes in Windows package scripts
 
 1.21
 - Read fastq-files (quality values are ignored)
